# uGame

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  local.properties
include/: Constants.h
include/core/: Application.h  AssetsManager.h  Config.h  GameState.h  Lang.h  PackageStream.h  StateManager.h
include/game/: Tile.h  TileBlock.h  TileObject.h  TileObjectBlock.h
include/game/world/: Chunk.h
include/gui/: Button.h  Control.h  ControlHeroList.h  ControlsContainer.h  InputBox.h  Label.h  UI.h  Window.h
include/state/: StateHeroList.h  StateLoading.h  StateMenu.h  StatePlay.h  StateSignIn.h
include/utils/: Logger.h  MD5.h  Utils.h
jni/: Android.mk  Application.mk
res/values/: strings.xml
src/: main.cpp
src/core/: Application.cpp  AssetsManager.cpp  Config.cpp  Lang.cpp  PackageStream.cpp  StateManager.cpp
src/game/: TileBlock.cpp
src/game/world/: Chunk.cpp  TileObjectBlock.cpp
src/gui/: Button.cpp  Control.cpp  ControlHeroList.cpp  ControlsContainer.cpp  InputBox.cpp  Label.cpp  UI.cpp  Window.cpp
src/state/: StateHeroList.cpp  StateLoading.cpp  StateMenu.cpp  StatePlay.cpp  StateSignIn.cpp
src/utils/: Logger.cpp  MD5.cpp  Utils.cpp
